--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-=======
 config.py
-
->>>>>>> 271cee8 (Initial commit)
+test.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
