--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     command: sh -c "python -m run"
     networks:
       - postgres
-    restart: always
+    restart: unless-stopped
     depends_on:
       - postgres
       - pgadmin
