--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: HW67lV0LeG9I2vmIYQTiLO6k
+      POSTGRES_PASSWORD: root
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
@@ -21,8 +21,8 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4
     environment:  
-      PGADMIN_DEFAULT_EMAIL: devpijawca@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: HW67lV0LeG9I2vmIYQTiLO6k
+      PGADMIN_DEFAULT_EMAIL: root@root.root
+      PGADMIN_DEFAULT_PASSWORD: root
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
